# cada-rescript

./: .gitignore  cada.js  detailed_changes.json  dune-project  package-lock.json  package.json  pyproject.toml
lib/: cada.ml  dune
python/: final.ipynb  llm_pipeline.ipynb  main.py  parser.py  requirements.txt  unit_testing.ipynb
python/llm-pipeline/: notebook.ipynb  test.ipynb
src/rescript_ast_diff/: __init__.py  bitbucket.py  compare_commits.py  differ.py  gitwrapper.py
